# yolo_service

./: CITATION.cff  CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: yolo_service_launch.py
msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3DArray.msg  Mask.msg  Pose2D.msg
src/: data.py  yolo_service_node.py
srv/: Detection.srv  ModelParams.srv  ObjectTracking.srv  PoseEstimation2D.srv  PoseEstimation3D.srv  SemanticSegmentation.srv
yolo_bringup/: package.xml
yolo_bringup/launch/: yolov10.launch.py  yolov8.launch.py  yolov9.launch.py
yolo_detection/: CMakeLists.backup.txt  CMakeLists.txt  package.xml  requirements.txt  setup.cfg  setup.py
yolo_detection/config/: detection_params.yaml
yolo_detection/launch/: viz.launch.py  yolov10.launch.py  yolov8.launch.py  yolov9.launch.py
yolo_detection/yolo_detection/: debug_node.py  viz_node.py  yolo_layer.py  yolo_node.py
yolo_launch/: CMakeLists.txt  package.xml
yolo_launch/launch/: yolov10.launch.py  yolov8.launch.py
yolo_metapackage/: CMakeLists.txt  package.xml
yolo_msgs/: CMakeLists.txt  package.xml
yolo_msgs/msg/: BoundingBox2D.msg  BoundingBox3D.msg  Detection.msg  DetectionArray.msg  KeyPoint3D.msg  Mask.msg  OrientedBoundingBox.msg  Point3D.msg
