<?xml version="1.0"?>
<package format="2">
  <name>yolo_service</name>
  <version>0.0.1</version>
  <description>ROS2 service for YOLO object detection</description>
  <maintainer email="chinthanapereranisal@gmail.com">Nisal Chinthana Perera</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>ultralytics</exec_depend> <!-- YOLO library -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>